# AestronToken

./: README.md
Java/: InvalidProtocolData.java  JniTest.java  MainActivity.java  Marshallable.java  RawMsg.java  TokenContent.java  TokenUtils.java
cpp/: example.cpp  int_types.h  makefile  packet.h  packetNew.h  protocol.h  tokenFactory.cpp  urlEncrypt.h  utility.h
cpp_gen_and_check/: a.out  blockbuffer.h  example.cpp  header.h  int_types.h  makefile  packet.h  packetNew.h  protocol.h  token.cpp  token.h  tokenCheck.cpp  tokenCheck.h  tokenFactory.cpp  tokenFactory.h  urlEncrypt.cpp  urlEncrypt.h  utility.h  varstr.h
golang/: token.go
js/: token.js
node.js/: test.js  token.js
php/: token.php
python/: token.py
rust/: Cargo.toml
rust/src/: main.rs
