[package]
name = "rust"
version = "0.1.0"
authors = ["wanlubing <wanlubing@bigo.sg>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rsa库
sha1 = "0.6.0"
# 加密库
rust-crypto = "^0.2"
# base64库
base64 = "0.12.3"
# bytes = ""
bytes = "1.0.1"

rand = "0.8.0"

chrono = "0.4.19"

hmac-sha1 = "0.1.3"

crc = "^1.0.0"